--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "vue": "^3.2.25",
+    "vue-aos": "^2.3.0",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@vitejs/plugin-vue": "^2.3.1",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
